Added more sections

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/x-icon">
     <!-- Fontawesome icons -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" />
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
@@ -34,6 +34,9 @@
                         <a href="">Skills</a>
                     </li>
                     <li class="nav-item">
+                        <a href="">Projects</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="">Contact</a>
                     </li>
                 </ul>
@@ -48,20 +51,23 @@
             <div class="content">
                 <div class="description">
                     <h3 class="salut">Hello World<span> <i class="fas fa-hand-peace"></i> </span></h3>
-                    <h2 class="name">I'm <span>Alex Kimeu</span></h2>
+                    <h2 class="name">I'm <span>Alex Kimeu ...</span></h2>
                     <h1 class="occupation">Software Developer</h1>
                     <div class="social">
-                        <a href="">
+                        <a href="" target="_blank">
                             <i class="fab fa-twitter fa-3x"></i>
                         </a>
-                        <a href="">
+                        <a href="" target="_blank">
                             <i class="fab fa-linkedin fa-3x"></i>
                         </a>
-                        <a href="">
+                        <a href="" target="_blank">
                             <i class="fab fa-github fa-3x"></i>
                         </a>
-                        <a href="">
+                        <a href="" target="_blank">
                             <i class="fab fa-dev fa-3x"></i>
+                        </a>
+                        <a href="" target="_blank">
+                            <i class="fab fa-medium fa-3x"></i>
                         </a>
                     </div>
                 </div>
@@ -74,7 +80,7 @@
     <section class="about">
         <div class="container">
             <div class="content">
-                <img src="./images/webdev.svg" alt="">
+                <img src="./images/dev.svg" alt="">
             <div class="description">
                 <h1 class="title">About</h1>
                 <p>Dedicated and passionate Software Developer with 3+ years of progressive experience. 
@@ -85,7 +91,7 @@
                     I am an Open Source contributor moved by the way Open Source is impacting our lives with technology 
                     and am really glad to be part of this.
                 </p>
-                <a href="" class="btn">Download CV</a>
+                <a href="" class="btn">Download CV <i class="fas fa-download"></i> </a>
             </div>
             </div>            
         </div>
@@ -93,7 +99,126 @@
     <!-- End About -->
 
     <!-- Skills section -->
+    <section class="skills">
+        <div class="container">
+            <div class="content">
+                <h1 class="title">Skills</h1>
+                <div class="skills-container">
+                    <i class="fab fa-html5 fa-8x"></i>
+                    <i class="fab fa-css3 fa-8x"></i>
+                    <i class="fab fa-bootstrap fa-8x"></i>
+                    <i class="fab fa-js fa-8x"></i>
+                    <i class="fab fa-react fa-8x"></i>
+                    <i class="fab fa-node fa-8x"></i>
+                    <i class="fab fa-python fa-8x"></i>
+                    <i class="fab fa-laravel fa-8x"></i>
+                    <i class="fab fa-git fa-8x"></i>
+                    <i class="fab fa-java fa-8x"></i>
+
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- End Skills -->
+
+    <!-- Services section -->
+    <section class="services">
+        <div class="container">
+            <div class="content">
+                <h1 class="title">Services</h1>
+                <div class="services-container">
+                    <div class="card">
+                        <img src="./images/dev.svg" alt="">
+                        <div class="card-body">
+                            <h3>Web Design</h3>
+                            <p>With my design skills, I can help you design an eye-catching website.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/webset.svg" alt="">
+                        <div class="card-body">
+                            <h3>Web Development</h3>
+                            <p>With my design skills, I can help you design an eye-catching website.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/app.svg" alt="">
+                        <div class="card-body">
+                            <h3>App Development</h3>
+                            <p>With my design skills, I can help you design an eye-catching website.</p>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/consult.svg" alt="">
+                        <div class="card-body">
+                            <h3>Consultancy & Support</h3>
+                            <p>With my design skills, I can help you design an eye-catching website.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End services -->
+
+    <!-- Projects -->
+    <section class="projects">
+        <div class="container">
+            <div class="content">
+                <h1 class="title">Projects</h1>
+
+                <div class="projects-container">
+                    <div class="card">
+                        <img src="./images/portfolio.svg" alt="">
+                        <div class="card-body">
+                            <h3><a href="" target="_blank">Portfolio</a></h3>   
+                            <p>Created using HTML5, CSS3 & JavaScript.</p>                         
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/dash.svg" alt="">
+                        <div class="card-body">
+                            <h3><a href="" target="_blank">COVID-19 Tracker</a></h3>   
+                            <p>Created using React, JavaScript D3 Library, Material-UI & Firebase</p>                         
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/macodi.svg" alt="">
+                        <div class="card-body">
+                            <h3><a href="" target="_blank">MACODI Website</a></h3>   
+                            <p>Created using Laravel, CSS3, Bootstrap5 and JavaScript.</p>                         
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="./images/merisah.svg" alt="">
+                        <div class="card-body">
+                            <h3><a href="" target="_blank">Merisah Website</a></h3>   
+                            <p>Created using Laravel, CSS3, Bootstrap5 and JavaScript.</p>                                               
+                        </div>
+                    </div>
+                </div>
+
+                <div class="view-more">
+                    <a href="" class="more">View More <i class="fas fa-arrow-right"></i> </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End projects -->
+
+    <!-- Contact -->
+    <section class="contact">
+        <div class="container">
+            <div class="content">
+                <h1 class="title">Contact</h1>
+                <div class="contact-container">
+                    <p>Want to work with me?</p>
+                    <a href="mailto:kimeualexis@gmail.com">contact me <i class="fas fa-paper-plane"></i> </a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Contact section -->
     
 </body>
 </html>
