--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
     <title>Alex Kimeu</title>
 </head>
 <body>
+    <div class="wrapper">
+        <div class="wrap">
 
     <!-- Nav -->
     <nav>
         <div class="container">
             <div class="navbar">
                 <a href="">
-                    <img src="./images/logo.png" class="logo" alt="Logo" />
+                    <img loading="lazy" src="./images/logo.png" class="logo" alt="Logo" />
                 </a>
 
                 <ul class="nav-links">
@@ -40,6 +42,13 @@
                         <a href="">Contact</a>
                     </li>
                 </ul>
+
+                <div class="burger">
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
+                </div>
+
             </div>
         </div>
     </nav>
@@ -54,24 +63,24 @@
                     <h2 class="name">I'm <span>Alex Kimeu ...</span></h2>
                     <h1 class="occupation">Software Developer</h1>
                     <div class="social">
-                        <a href="" target="_blank">
+                        <a href="https://twitter.com/_alexkimeu" target="_blank">
                             <i class="fab fa-twitter fa-3x"></i>
                         </a>
-                        <a href="" target="_blank">
+                        <a href="https://www.linkedin.com/in/alexkimeu0/" target="_blank">
                             <i class="fab fa-linkedin fa-3x"></i>
                         </a>
-                        <a href="" target="_blank">
+                        <a href="https://github.com/alexkimeu0" target="_blank">
                             <i class="fab fa-github fa-3x"></i>
                         </a>
-                        <a href="" target="_blank">
+                        <a href="https://dev.to/alexkimeu0" target="_blank">
                             <i class="fab fa-dev fa-3x"></i>
                         </a>
-                        <a href="" target="_blank">
+                        <a href="https://medium.com/@alexkimeu0" target="_blank">
                             <i class="fab fa-medium fa-3x"></i>
                         </a>
                     </div>
                 </div>
-                <img src="./images/proud.svg" alt="">                
+                <img loading="lazy" src="./images/proud.svg" alt="">                
             </div>
         </div>
     </section>
@@ -80,7 +89,7 @@
     <section class="about">
         <div class="container">
             <div class="content">
-                <img src="./images/dev.svg" alt="">
+                <img loading="lazy" src="./images/dev.svg" alt="">
             <div class="description">
                 <h1 class="title">About</h1>
                 <p>Dedicated and passionate Software Developer with 3+ years of progressive experience. 
@@ -91,7 +100,7 @@
                     I am an Open Source contributor moved by the way Open Source is impacting our lives with technology 
                     and am really glad to be part of this.
                 </p>
-                <a href="" class="btn">Download CV <i class="fas fa-download"></i> </a>
+                <a href="https://drive.google.com/file/d/1TFl9Okh85xwTMMASEsRldPiowC9-fxg_/view?usp=sharing" target="_blank" class="btn" download="CV.pdf">Download CV <i class="fas fa-download"></i> </a>
             </div>
             </div>            
         </div>
@@ -110,11 +119,12 @@
                     <i class="fab fa-js fa-8x"></i>
                     <i class="fab fa-react fa-8x"></i>
                     <i class="fab fa-node fa-8x"></i>
+                    <i class="fab fa-npm fa-8x"></i>
                     <i class="fab fa-python fa-8x"></i>
                     <i class="fab fa-laravel fa-8x"></i>
                     <i class="fab fa-git fa-8x"></i>
                     <i class="fab fa-java fa-8x"></i>
-
+                    <i class="fab fa-android fa-8x"></i>
                 </div>
             </div>
         </div>
@@ -128,31 +138,31 @@
                 <h1 class="title">Services</h1>
                 <div class="services-container">
                     <div class="card">
-                        <img src="./images/dev.svg" alt="">
+                        <img loading="lazy" src="./images/dev.svg" alt="">
                         <div class="card-body">
                             <h3>Web Design</h3>
                             <p>With my design skills, I can help you design an eye-catching website.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/webset.svg" alt="">
+                        <img loading="lazy" src="./images/webset.svg" alt="">
                         <div class="card-body">
                             <h3>Web Development</h3>
-                            <p>With my design skills, I can help you design an eye-catching website.</p>
+                            <p>I will convert your design into fully functional website where users interact with your data.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/app.svg" alt="">
+                        <img loading="lazy" src="./images/app.svg" alt="">
                         <div class="card-body">
                             <h3>App Development</h3>
-                            <p>With my design skills, I can help you design an eye-catching website.</p>
+                            <p>With my mobile app development skills, I will create an app for your business.</p>
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/consult.svg" alt="">
+                        <img loading="lazy" src="./images/consult.svg" alt="">
                         <div class="card-body">
                             <h3>Consultancy & Support</h3>
-                            <p>With my design skills, I can help you design an eye-catching website.</p>
+                            <p>I will offer support and help you improve your design/website to attract more users.</p>
                         </div>
                     </div>
                 </div>
@@ -169,37 +179,37 @@
 
                 <div class="projects-container">
                     <div class="card">
-                        <img src="./images/portfolio.svg" alt="">
+                        <img loading="lazy" src="./images/portfolio.svg" alt="">
                         <div class="card-body">
                             <h3><a href="" target="_blank">Portfolio</a></h3>   
                             <p>Created using HTML5, CSS3 & JavaScript.</p>                         
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/dash.svg" alt="">
+                        <img loading="lazy" src="./images/dash.svg" alt="">
                         <div class="card-body">
-                            <h3><a href="" target="_blank">COVID-19 Tracker</a></h3>   
+                            <h3><a href="https://covid-19-96184.web.app/" target="_blank">COVID-19 Tracker</a></h3>   
                             <p>Created using React, JavaScript D3 Library, Material-UI & Firebase</p>                         
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/macodi.svg" alt="">
+                        <img loading="lazy" src="./images/macodi.svg" alt="">
                         <div class="card-body">
-                            <h3><a href="" target="_blank">MACODI Website</a></h3>   
+                            <h3><a href="https://github.com/alexkimeu0/macodi-website" target="_blank">MACODI Website</a></h3>   
                             <p>Created using Laravel, CSS3, Bootstrap5 and JavaScript.</p>                         
                         </div>
                     </div>
                     <div class="card">
-                        <img src="./images/merisah.svg" alt="">
+                        <img loading="lazy" src="./images/merisah.svg" alt="">
                         <div class="card-body">
-                            <h3><a href="" target="_blank">Merisah Website</a></h3>   
+                            <h3><a href="https://github.com/merisahsolar/merisahadmin" target="_blank">Merisah Website</a></h3>   
                             <p>Created using Laravel, CSS3, Bootstrap5 and JavaScript.</p>                                               
                         </div>
                     </div>
                 </div>
 
                 <div class="view-more">
-                    <a href="" class="more">View More <i class="fas fa-arrow-right"></i> </a>
+                    <a href="https://github.com/alexkimeu0" target="_blank" class="more">View More <i class="fas fa-arrow-right"></i> </a>
                 </div>
             </div>
         </div>
@@ -219,6 +229,41 @@
         </div>
     </section>
     <!-- End Contact section -->
+
+    <!-- Footer -->
+    <footer>
+        <div class="container">
+            <div class="content">
+                <div class="footer">
+                    <p>&copy;Alex Kimeu 2021</p>
+                    <div class="icons">
+                        <a href="https://twitter.com/_alexkimeu" target="_blank">
+                            <i class="fab fa-twitter fa-2x"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/in/alexkimeu0/" target="_blank">
+                            <i class="fab fa-linkedin fa-2x"></i>
+                        </a>
+                        <a href="https://github.com/alexkimeu0" target="_blank">
+                            <i class="fab fa-github fa-2x"></i>
+                        </a>
+                        <a href="https://dev.to/alexkimeu0" target="_blank">
+                            <i class="fab fa-dev fa-2x"></i>
+                        </a>
+                        <a href="https://medium.com/@alexkimeu0" target="_blank">
+                            <i class="fab fa-medium fa-2x"></i>
+                        </a>
+                    </div>
+                    <p>Designed with <i class="fas fa-heart"></i> by <a href="" target="_blank">Alex</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- End footer -->
     
+    </div>
+    </div>
+
+    <script src="./js/script.js"></script>
+
 </body>
 </html>
