--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
 
                 <ul class="nav-links">
                     <li class="nav-item">
-                        <a href="">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="">Skills</a>
+                        <a href="#skills">Skills</a>
                     </li>
                     <li class="nav-item">
-                        <a href="">Services</a>
+                        <a href="#services">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a href="">Projects</a>
+                        <a href="#projects">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a href="">Contact</a>
+                        <a href="#contact">Contact</a>
                     </li>
                 </ul>
 
@@ -86,7 +86,7 @@
     </section>
     <!-- End Header -->
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="container">
             <div class="content">
                 <img loading="lazy" src="./images/dev.svg" alt="">
@@ -99,6 +99,10 @@
                     <br>
                     I am an Open Source contributor moved by the way Open Source is impacting our lives with technology 
                     and am really glad to be part of this.
+                    <br>
+                    It's amazing that we live in an age where we can make many possibilities with technology 
+                    and I am ready to collaborate with other developers in my career to develop solutions geared 
+                    to help organizations increase productivity and accelerate business performance.
                 </p>
                 <a href="https://drive.google.com/file/d/1TFl9Okh85xwTMMASEsRldPiowC9-fxg_/view?usp=sharing" target="_blank" class="btn" download="CV.pdf">Download CV <i class="fas fa-download"></i> </a>
             </div>
@@ -108,7 +112,7 @@
     <!-- End About -->
 
     <!-- Skills section -->
-    <section class="skills">
+    <section class="skills" id="skills">
         <div class="container">
             <div class="content">
                 <h1 class="title">Skills</h1>
@@ -132,7 +136,7 @@
     <!-- End Skills -->
 
     <!-- Services section -->
-    <section class="services">
+    <section class="services" id="services">
         <div class="container">
             <div class="content">
                 <h1 class="title">Services</h1>
@@ -172,7 +176,7 @@
     <!-- End services -->
 
     <!-- Projects -->
-    <section class="projects">
+    <section class="projects" id="projects">
         <div class="container">
             <div class="content">
                 <h1 class="title">Projects</h1>
@@ -217,7 +221,7 @@
     <!-- End projects -->
 
     <!-- Contact -->
-    <section class="contact">
+    <section class="contact" id="contact">
         <div class="container">
             <div class="content">
                 <h1 class="title">Contact</h1>
