--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                     <div class="card">
                         <img loading="lazy" src="./images/portfolio.svg" alt="">
                         <div class="card-body">
-                            <h3><a href="" target="_blank">Portfolio</a></h3>   
+                            <h3><a href="https://aleks-kimeu.github.io/" target="_blank">Portfolio</a></h3>   
                             <p>Created using HTML5, CSS3 & JavaScript.</p>                         
                         </div>
                     </div>
