--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
 <body>
     <div class="wrapper">
         <div class="wrap">
-
     <!-- Nav -->
     <nav>
         <div class="container">
             <div class="navbar">
-                <a href="">
+                <a href="https://aleks-kimeu.github.io">
                     <img loading="lazy" src="./images/logo.png" class="logo" alt="Logo" />
                 </a>
 
