changed profile image

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         </a>
                     </div>
                 </div>
-                <img loading="lazy" src="./images/proud.svg" alt="">                
+                <img loading="lazy" src="./images/prof.jpeg" alt="" class="profile-img">                
             </div>
         </div>
     </section>
